# c-array

./: CMakeLists.txt  CMakePresets.json  README.md  conan.py  conanfile.py
cmake/: ArrayConfig.cmake.in  ProjectInstallRules.cmake  ProjectSettings.cmake  ProjectUtils.cmake  array-config.cmake.in  cmake_uninstall.cmake
include/array/: array.h  export.h
include/c_array/: c_array.h  export.h
src/: CMakeLists.txt  array.c
src/array/: array.c
test/: CMakeLists.txt  array_tests.cpp
test/array/: array_test.cpp  c_array_test.cpp
