#-----------------------------------------------------------------------------------------------------------------------
# Information
#-----------------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION})

#-----------------------------------------------------------------------------------------------------------------------
# Dependencies
#-----------------------------------------------------------------------------------------------------------------------
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    find_package(${PROJECT_NAME} REQUIRED)
endif()

#-----------------------------------------------------------------------------------------------------------------------
# Targets
#-----------------------------------------------------------------------------------------------------------------------
# Set the library's source files
set(PROJECT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.c")
target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${PROJECT_SOURCES})

